cart new methods
